# Rust-Eth-Brtute-Script

./: Cargo.toml  LICENSE  README.md  gpu_health_monitor.sh  gpu_kernel.cu  launch_4miners.sh  launch_watchdog.sh  run_cuda.bat  run_cuda.sh  start_everything  start_everything.sh  test  test.cu
src/: cuda_test.rs  gpu_kernel.ptx  gpu_wrapper.rs  main.rs
