[package]
name = "seeds"
version = "0.1.0"
edition = "2021"

[dependencies]
# CUDA support for GPU kernels
cust = "0.3.2"

# Serialization for config and state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line argument parsing
clap = { version = "4.2.7", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and progress display
log = "0.4"
env_logger = "0.9"

# Ethereum address derivation utilities
ethers-core = "2.0"

[build-dependencies]
# For compiling C/C++ code if needed
cc = "1.0"

[profile.release]
opt-level = 3
